--- a/blogger/mulu/留言/situation.css
+++ b/blogger/mulu/留言/situation.css
@@ -10,7 +10,7 @@
             margin: 0;
         }
 
-        *a {
+        a {
             text-decoration: none;
             outline: none;
         }
@@ -166,13 +166,17 @@
 
         .output {
             background-color: white;
-            min-height: 300px;
 
         }
+
 
         .niceng{
             display: block;
             margin-bottom:40px ;
+            width: 100%;
+            height: 30px;
+            border-radius: 9px;
+            border: 1px solid #cccccc;
         }
 
         #test{
@@ -197,6 +201,7 @@
             font-size: 14px;
             margin-top: 10px;
             margin-left: 10px;
+            margin-bottom:10px ;
         }
         /*留言板留言内容区域*/
 
