增加内容跟修改模板

--- a/blogger/mulu/hint.css
+++ b/blogger/mulu/hint.css
@@ -48,6 +48,15 @@
     color: #565755;
 }
 
+.dsi .list1 div a{
+    width: 100%;
+    height: 100%;
+    font-size: 30px;
+    text-align: center;
+    line-height: 30px;
+    color: #565755;
+}
+
 .dsi p {
     display: block;
     color: #565755;
